# Edge-and-Shape-Detection

./: .gitignore  README.md  run.py
Backend/: CMakeLists.txt  binding_utils.h  canny_and_shapes_detection.cpp  contour_fitting_objects.cpp
Backend/src/: lab_functions.cpp  main.cpp  shapes.cpp  snake.cpp
Frontend/: front.py
